# documents-vector-search

./: .gitignore  README.md  UPDATES.md  collection_fetch_cmd_adapter.py  collection_search_cmd_adapter.py  collection_search_mcp_http_server.py  collection_search_mcp_stdio_adapter.py  collection_search_unified_mcp_adapter.py  confluence_collection_create_cmd_adapter.py  files_collection_create_cmd_adapter.py  jira_collection_create_cmd_adapter.py  pyproject.toml
.github/: copilot-instructions.md
main/core/: documents_collection_creator.py  documents_collection_fetcher.py  documents_collection_searcher.py
main/factories/: create_collection_factory.py  fetch_collection_factory.py  search_collection_factory.py  update_collection_factory.py
main/indexes/: filter_parser.py  indexer_factory.py
main/indexes/embeddings/: base_embedder.py  sentence_embeder.py
main/indexes/indexers/: base_indexer.py  chroma_indexer.py  faiss_indexer.py  sqllite_indexer.py
main/persisters/: base_persister.py  disk_persister.py
main/sources/: base_document_converter.py  base_document_reader.py  document_cache_reader_decorator.py
main/sources/confluence/: confluence_cloud_document_converter.py  confluence_cloud_document_reader.py  confluence_document_converter.py  confluence_document_reader.py
main/sources/files/: files_document_converter.py  files_document_reader.py
main/sources/jira/: jira_cloud_document_converter.py  (+3 more)
main/splitter/: base_text_splitter.py  text_splitter.py
main/utils/: batch.py  formatting.py  logger.py  performance.py  progress_bar.py  requests.py  retry.py
(+1 files in other folders)
