[project]
name = "documents-vector-search"
version = "0.1.0"
description = "Project allows document indexing in a local vector database and then search (supports Jira, Confluence and local files, can be integrated via MCP)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "chromadb>=1.0.20",
    "faiss-cpu>=1.11.0",
    "langchain>=0.3.26",
    "mcp>=1.11.0",
    "requests>=2.32.4",
    "sentence-transformers>=5.0.0",
    "unstructured[all-docs]>=0.18.5",
]
